# OpenGL_Lerning

./: CMakeLists.txt  OpenGL_GLFL_Lerning.sln  OpenGL_GLFL_Lerning.vcxproj  OpenGL_GLFL_Lerning.vcxproj.filters  main.cpp
OpenGL_GLFW_Libs/GLAD/include/glad/: glad.h
OpenGL_GLFW_Libs/GLAD/src/: glad.c
OpenGL_GLFW_Libs/Lib/: glfw3.lib
Shaders/DefaultShader/: defaultShader.frag  defaultShader.vert
src/: main.cpp
src/ShaderUtils/: Shader.h
src/Shaders/DefaultShader/: defaultShader.frag  defaultShader.vert
src/textures/: TextureLoader.cpp
